--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,5 +1,10 @@
 2003-08-28  Daniel Jacobowitz  <drow@mvista.com>
 
+	* config/powerpc/tm-nbsd.h: Undefine IBM6000_TARGET.  Suggested
+	by Nathan J. Williams.
+
+2003-08-28  Daniel Jacobowitz  <drow@mvista.com>
+
 	* lin-lwp.c (wait_lwp): New function, copied from
 	stop_wait_callback.  Clean up.
 	(stop_wait_callback): Use wait_lwp.
