Index: common/ChangeLog 2003-08-28  Andrew Cagney  <cagney@redhat.com>
	* dv-glue.c (hw_glue_finish): Change %d to %ld to match sizeof.
	* sim-options.c (print_help): Cast the format with specifier to
	"int".

Index: mn10300/ChangeLog
2003-08-28  Andrew Cagney  <cagney@redhat.com>

	* dv-mn103ser.c (do_polling_event): Change type of "serial_reg" to
	"long".
	(read_status_reg): Cast "serial_reg" to "long".
	* dv-mn103tim.c (do_counter_event): Change type of "timer_nr" to
	"long".
	(do_counter6_event, write_mode_reg, write_tm6md): Ditto.

--- a/sim/common/ChangeLog
+++ b/sim/common/ChangeLog
@@ -1,3 +1,9 @@
+2003-08-28  Andrew Cagney  <cagney@redhat.com>
+
+	* dv-glue.c (hw_glue_finish): Change %d to %ld to match sizeof.
+	* sim-options.c (print_help): Cast the format with specifier to
+	"int".
+
 2003-06-23  Michael Snyder  <msnyder@redhat.com>
 
 	* nrun.c (main): Delete h8/300 ifdef (sim now handles signals).
