--- a/gdb/testsuite/ChangeLog
+++ b/gdb/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2003-08-28  Jeff Johnston  <jjohnstn@redhat.com>
+
+	* gdb.base/dump.exp: Skip for ia64.
+
 2003-08-25  Jeff Johnston  <jjohnstn@redhat.com>
 
 	* gdb.asm/asm-source.exp: Add ia64 support.
