--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,5 +1,8 @@
 2003-08-29  Mark Kettenis  <kettenis@gnu.org>
 
+	* regcache.c (regcache_raw_supply): Don't assert that BUF isn't a
+	null pointer.  Fix typo in comment.
+
 	* regcache.c (supply_register): Reimplement to call
 	regcache_raw_supply.
 	(regcache_collect): Reimplement by calling regcache_raw_collect.
