--- a/sim/ChangeLog
+++ b/sim/ChangeLog
@@ -1,3 +1,12 @@
+2003-08-20  Michael Snyder  <msnyder@redhat.com>
+            Dave Brolley  <brolley@redhat.com>
+
+	* frv/: New directory, simulator for the Fujitsu FR-V.
+	* testsuite/frv-elf/: New directory.
+	* testsuite/sim/frv/: New directory.
+	* configure.in: Add frv configury.
+	* configure: Regenerate.
+
 2003-08-10  Ben Elliston  <bje@wasabisystems.com>
 
 	* MAINTAINERS: Update my mail address.
