--- a/sim/ChangeLog
+++ b/sim/ChangeLog
@@ -1,9 +1,11 @@
+2003-08-29  Dave Brolley  <brolley@redhat.com>
+
+	* MAINTAINERS: Add myself as maintainer of the FRV port.
+
 2003-08-20  Michael Snyder  <msnyder@redhat.com>
             Dave Brolley  <brolley@redhat.com>
 
-	* frv/: New directory, simulator for the Fujitsu FR-V.
-	* testsuite/frv-elf/: New directory.
-	* testsuite/sim/frv/: New directory.
+	* frv/: New directory, simulator for the Fujitsu FRV.
 	* configure.in: Add frv configury.
 	* configure: Regenerate.
 
