--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,9 @@
+2003-08-31  Mark Kettenis  <kettenis@gnu.org>
+
+	* alphafbsd-tdep.c (alphafbsd_sigcontext_addr): Use
+	frame_unwind_register_unsigned instead of
+	frame_unwind_unsigned_register.
+
 2003-08-30  Mark Kettenis  <kettenis@gnu.org>
 
 	* configure.in: Search for gethostbyname in libnsl.
