--- a/sim/testsuite/ChangeLog
+++ b/sim/testsuite/ChangeLog
@@ -1,3 +1,9 @@
+2003-09-03  Michael Snyder  <msnyder@redhat.com>
+
+	* sim/frv/interrupts/Ipipe-fr400.cgs: New file.
+	* sim/frv/interrupts/Ipipe-fr500.cgs: New file.
+	* sim/frv/interrupts/Ipipe.cgs: Remove (replaced by above).
+
 2003-08-20  Michael Snyder  <msnyder@redhat.com>
             On behalf of Dave Brolley
   
