--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,7 @@
+2003-09-04  Andrew Cagney  <cagney@redhat.com>
+
+	* Makefile.in: Re-generate all dependencies.
+
 2003-09-03  Andrew Cagney  <cagney@redhat.com>
 
 	* arch-utils.h (legacy_print_insn): Delete declaration.
