* breakpoint.c (watchpoint_check): Remove accidentally checked in 	unused code.  Add comment.

--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,5 +1,10 @@
 2003-09-04  Corinna Vinschen  <vinschen@redhat.com>
 
+	* breakpoint.c (watchpoint_check): Remove accidentally checked in
+	unused code.  Add comment.
+
+2003-09-04  Corinna Vinschen  <vinschen@redhat.com>
+
 	* breakpoint.c (watchpoint_check): Check for pc being in an
 	epilogue if watchpoint frame couldn't be found.
 
