--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,5 +1,21 @@
 2003-09-04  Andrew Cagney  <cagney@redhat.com>
 
+	* configure.tgt: Add "mips64*-*-*" target.  Delete
+	mips64*el-*-ecoff*, mips64*el-*-elf*, mips*el-*-ecoff*,
+	mips*el-*-elf*, mips*-*-lnews*, mips*-*-sysv*, mips*-*-riscos*,
+	mips*-*-ecoff*, mips*-*-elf*, mips*-little-*, mips*-big-*,
+	mips*-dec-*, mips64*-big-*, mips64*vr*-*-elf*, mips64*-*-ecoff*,
+	mips*-sony-*, and mips64*-*-elf* targets.
+	* config/mips/embedl.mt: Delete file.
+	* config/mips/embedl64.mt: Delete file.
+	* config/mips/mips.mt: Delete file.
+	* config/mips/mips64.mt: Delete file.
+	* config/mips/tm-embed.h: Delete file.
+	* config/mips/embed.mt (TM_FILE): Set to "tm-mips.h".
+	* config/mips/embed64.mt: Delete out-of-date comment.
+
+2003-09-04  Andrew Cagney  <cagney@redhat.com>
+
 	* hppa-tdep.c (hppa_gdbarch_init): Set
 	"have_nonsteppable_watchpoint".
 	* config/pa/nm-hppah.h (HAVE_NONSTEPPABLE_WATCHPOINT): Delete.
