--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,7 @@
+2003-09-06  Mark Kettenis  <kettenis@gnu.org>
+
+	* sol-thread.c: Include "gdb_string.h".
+
 2003-09-03  Mark Kettenis  <m.kettenis@osp.nl>
 
 	* gcore.c: Reorder include files in alphabetical order.  Include
